We can read and parse a file now. Next step is to get it to write a normal index

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -2,3 +2,5 @@ libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=2.0
+libs.Jackson2.classpath=\
+    ${base}/Jackson2/jackson2/
