--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,9 +25,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/LuceneIndexer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jackson-annotations-2.2.3.jar=lib/jackson-annotations-2.2.3.jar
+file.reference.jackson-core-2.2.3.jar=lib/jackson-core-2.2.3.jar
+file.reference.jackson-databind-2.2.3.jar=lib/jackson-databind-2.2.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jackson-core-2.2.3.jar}:\
+    ${file.reference.jackson-databind-2.2.3.jar}:\
+    ${file.reference.jackson-annotations-2.2.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
