--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,10 @@ excludes=
 file.reference.jackson-annotations-2.2.3.jar=lib/jackson-annotations-2.2.3.jar
 file.reference.jackson-core-2.2.3.jar=lib/jackson-core-2.2.3.jar
 file.reference.jackson-databind-2.2.3.jar=lib/jackson-databind-2.2.3.jar
+file.reference.lucene-analyzers-common-4.4.0.jar=lib/lucene-analyzers-common-4.4.0.jar
 file.reference.lucene-core-4.4.0.jar=lib/lucene-core-4.4.0.jar
 file.reference.lucene-spatial-4.4.0.jar=lib/lucene-spatial-4.4.0.jar
+file.reference.spatial4j-0.3.jar=lib/spatial4j-0.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -37,7 +39,9 @@ javac.classpath=\
     ${file.reference.jackson-databind-2.2.3.jar}:\
     ${file.reference.jackson-annotations-2.2.3.jar}:\
     ${file.reference.lucene-core-4.4.0.jar}:\
-    ${file.reference.lucene-spatial-4.4.0.jar}
+    ${file.reference.lucene-spatial-4.4.0.jar}:\
+    ${file.reference.spatial4j-0.3.jar}:\
+    ${file.reference.lucene-analyzers-common-4.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
